--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^9.6.0",
+    "gh-pages": "^3.2.3",
     "mapbox-gl": "^2.5.1",
     "next": "12.0.2",
     "react": "17.0.2",
